[tool.poetry]
name = "learning_prefect_1.0"
version = "0.1.0"
description = ""
authors = ["Taylor Curran <taylorcurranagtc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^1.2.2"
python-dotenv = "^0.20.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
